# nushell-demo

./: Cargo.toml  somefile.nu
src/: main.rs
